product-page.css
.product-page__container {
  display: flex;
  width: var(--margin-space);
  height: max-content;
  padding-top: 0.3%;
  background-color: white;
  opacity: 0;
  overflow-y: auto;
  margin-bottom: 252px;
}

.product-page__content {
  display: flex;
  justify-content: start;
  width: 100%;
  height: 100%;
  scrollbar-width: none;
}

.product-page__left-side-container {
  width: 60%;
  height: max-content;
  display: flex;
  justify-content: end;
  scrollbar-width: none;
}

.product-page__left-side-content {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto;
  grid-template-areas:
    "main secondary"
    "video video";
  width: 100%;
  align-items: stretch;
  justify-items: stretch;
  gap: 0.5%;
}

.product-page__grid-item {
  width: 100%;
  height: auto;
  object-fit: cover;
  aspect-ratio: 1 / 1;
}

.product-page__grid-item-video {
  width: 100%;
  height: auto;
  object-fit: cover;
}

.product-page__right-side-container {
  position: sticky;
  width: 40%;
  height: 100%;
  top: 0;
  display: flex;
  justify-content: center;
}

.product-page__right-side-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
  height: max-content;
  gap: 45px;
  margin-top: 19px;
}

.product-page__checkout-buttons {
  all: unset;
  width: 100%;
  height: max-content;
  font-size: var(--h5);
  font-weight: normal;
  background-color: whitesmoke;
  border: 2px solid black;
  border-radius: 7.5px;
  text-align: center;
  background-color: rgb(255, 255, 255);
  border: 2px solid rgb(155, 155, 155);
  border-radius: 9px;
  text-wrap: nowrap;
  padding-block: 0.3rem;
  user-select: none;
  overflow: hidden;
}

.product-page__right-side-content p,
.product-page__right-side-content li {
  font-family: var(--standard-font-family);
  font-size: var(--p-submain);
  text-wrap: wrap;
}



.product-page__flex-item h2 {
  font-size: var(--h3);
  padding-inline: 10px;
}



.product-page__flex-subitem h2 {
  font-size: 1.1rem;
}


.product-page__titleandprice-container {
  height: max-content;
  width: 9.4px;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  row-gap: 10px;
  border: 2px solid #eaeaea;
  border-radius: 10px;
  padding-top: 22px;
}

.product-page__flex-item-title {
  display: flex;
  height: max-content;
  width: max-content;
  outline: 1px solid #cecece;
  border: 2px solid #a5b9a547;
  background-color: white;
}

.product-page__flex-item-price {
  display: flex;
  height: max-content;
  width: max-content;
  margin-top: 3.5%;
  background-color: white;
  outline: 1px solid #cecece;
  border: 2px solid #a5b9a547;
}


.product-page__flex-item-promo {
  display: flex;
  height: max-content;
  width: 100%;
  background-color: #b8ceb8;
  border-radius: 10.1px;
  text-decoration: none;
  color: black;
  align-items: center;
  justify-content: space-evenly;
  padding: 10px;
}

.product-page__promo {
  width: 18%;
}

.product-page__promo-left {
  width: max-content;
  height: max-content;
  display: flex;
  column-gap: 9px;
  align-items: center;
  justify-content: start;
  max-width: 61%;
  padding-inline: 10px;
  flex-wrap: wrap;
}

.product-page__promo-left h2 {
  text-align: center;
  font-size: 1.4rem;
  font-weight: bold;
  text-wrap: wrap;
  max-width: 100%;
}

.product-page__promo-right {
  width: 42.4%;
  height: max-content;
  overflow: hidden;
  padding-block: 1px;
  display: flex;
  align-items: center;
  max-width: 160px;
}

.product-page__promo-image {
  width: 100%;
  object-fit: cover;
  aspect-ratio: 1 / 1;
  height: auto;
  border-radius: 10px;
  min-width: 56.8px;
}

.product-page__flex-item-shipping {
  display: flex;
  justify-content: center;
  align-items: start;
  text-align: left;
  height: max-content;
  width: 100%;
  flex-direction: column;
  overflow: hidden;
}

.product-page__flex-item-shipping div p {
  font-weight: 1;
}

.product-page__flex-item-shipping-content {
  width: 100%;
  height: 100%;
}

.product-page__flex-item-details {
  display: flex;
  justify-content: start;
  text-align: left;
  height: max-content;
  width: 100%;
  flex-direction: column;
}

.product-page__flex-item-payment-options {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  text-align: left;
  height: max-content;
  width: 100%;
}

.product-page__flex-item--button-blue {
  background-color: var(--button-purchase-bg-color);
  border: 2px solid rgb(61, 132, 168);
  border-radius: 9px;
}

.product-page__flex-item--button-bluelight {
  background-color: rgba(98, 201, 252, 0.48);
  border: 2px solid rgba(61, 132, 168, 0.52);
  border-radius: 9px;
}


.product-page__flex-item--button-red {
  background-color: rgb(255, 233, 233);
  border: 2px solid rgb(208, 170, 170);
  border-radius: 9px;
}








.product-page__checkout-buttons:hover {
  background-color: #8080803d;
  cursor: pointer;
}

.product-page__checkout-buttons:active {
  background-color: #00000070;
}

.product-page__flex-subsubitem-favorites:active {
  background-color: #00000070;
}

.product-page__flex-item-title-container {
  display: flex;
  justify-content: center;
}






.product-page__purchase-section {
  width: 100%;
  height: max-content;
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 5.5px;
  position: relative;
  justify-content: space-evenly;
}
.product-page__addtobag-container {
  width: 100%;
  height: max-content;
  display: flex;
  justify-content: center;
}
.product-page__checkout-container {
  width: 100%;
  height: max-content;
  display: flex;
  justify-content: center;
}
.product-page__giftandfav-container {
  width: 100%;
  height: max-content;
  display: flex;
  justify-content: center;
}
.product-page__giftandfav-gift {
  width: 50%;
  min-width: auto;
}
.product-page__giftandfav-fav {
  width: 50%;
  min-width: auto;
}
.product-page__checkout-button.green {
  background-color: rgb(228, 255, 233);
  border: 2px solid rgb(170, 208, 186);
  border-radius: 9px;
}
.product-page__checkout-button:hover {
  background-color: #21bb2970;
  cursor: pointer;
}

.product-page__checkout-button:active {
  background-color: #0253067e;
}


/* ====== ≥1200px ====== */
@media (min-width: 1200px) {
  .product-page__promo-left h2 {
  }

  .product-page__grid-item {
    height: 465px;
  }

  .product-page__container {
  }

  .product-page__content {
    overflow-y: auto;
  }

  .product-page__left-side-container {
    overflow-y: auto;
    border-right: 2px solid black;
  }
}

@media (max-width:1200px){
  .product-page__promo-left p {
    font-size:0.6rem;
  }
  .product-page__promo-left h2 {
    
  font-size: 0.9rem;
  }
}

/* ====== ≤992px ====== */
@media (max-width: 992px) {
  .product-page__left-side-content {
    min-height: 55%;
  }

  .product-page__right-side-content {
  }

  .product-page__flex-subitem {
    height: 29px;
  }

  .product-page__promo-left h2 {
    font-size: 0.9rem;
  }

  .product-page__right-side-content p {
    /*! padding-left: 8.3px; */
    font-size: 0.6rem;
  }

  .product-page__flex-item {
  }

  .product-page__flex-subsubitem {
    width: 137.6px;
    flex: 0 0 auto;
  }

  .product-page__flex-subsubitem h2 {
    font-size: 0.9rem;
    flex: 0 0 auto;
  }

  .product-page__flex-item-promo {
  }

  .product-page__right-side-container {
    width: 40%;
  }

  .product-page__container {
    height: max-content;
    padding-bottom: 136px;
    box-sizing: content-box;
  }
  .product-page__promo-left {
    
  flex-wrap: wrap;
  }
}
@media (max-width:728px){
  .product-page__promo-left p {
    font-size:0.6rem;
  }
}

/* ====== ≤480px ====== */
@media (max-width: 480px) {
  .product-page__left-side-content {
    min-height: 33.8%;
  }

  .product-page__right-side-content {
  }

  .product-page__flex-subitem {
    height: 34.9px;
    width: 358px;
  }

  .product-page__right-side-content h2 {
    font-size: 1.2rem;
    flex: 0 0 auto;
  }

  .product-page__promo-left h2 {
    font-size: 1rem;
  }

  .product-page__right-side-content p {
    font-size: 0.7rem;
  }

  .product-page__flex-item {
    padding: 10px;
    justify-content: start;
  }

  .product-page__flex-subsubitem {
    width: 177.5px;
  }

  .product-page__flex-subsubitem h2 {
    font-size: 1.1rem;
  }

  .product-page__flex-item-promo {
  }

  .product-page__right-side-container {
    width: 100%;
  }

  .product-page__container {
    height: max-content;
    padding-bottom: 100px;
  }

  .product-page__content {
    flex-direction: column;
  }

  .product-page__left-side-container {
    width: 100%;
    height: 464px;
  }

  .product-page__promo-left {
  /*! flex-wrap: nowrap; */
  }

  .product-page__flex-item-title h2 {
    font-size: 2rem;
  }

  .product-page__flex-item-title-container {
    margin-top: 14.5px;
    margin-bottom: 9.7px;
  }
  .page-product .spacer {
  height: var(--logo-height);
}
  .product-page__promo-right {
    
  max-width: 140px;
  }
}

